# FUN

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/: car.mtl
blend/: car.blend  wheel.blend
include/: assets.h  camera.h  car.h  game.h  light.h  log.h  phys.h  player.h  raylibext.h  shader.h  skydome.h  terrain.h  vecmath.h
shaders/: base.fsh  leet.fsh  leet.vsh  skydome.fsh  skydome.vsh
src/: camera.c  car.c  game.c  light.c  log.c  main.c  phys.c  player.c  raylibext.c  shader.c  skydome.c  terrain.c
